# wizwalker-rs

./: .gitignore  Cargo.toml  README.md  client.py  launch-jules.mjs  output.txt  output_final.txt  package-lock.json  package.json  patch_handler.rs  test_windows.rs
.github/workflows/: ci.yml  merge-gate.yml
.jules/: jules_handoff_prompt.md
.jules/cache/: sessions.jsonl
.jules/cache/15301027789010583131/: session.json
.jules/cache/16678679771943186145/: session.json
.jules/cache/18400269701079164058/: session.json
.jules/cache/1978252114807361336/: session.json
.jules/cache/400077038625940373/: session.json
.jules/cache/4676640393640381018/: session.json
.jules/cache/5322262872671007761/: session.json
.jules/cache/6518915373428707039/: session.json
.jules/cache/6691488501277467343/: session.json
.jules/cache/7384418410490197189/: session.json
.jules/cache/8184222198215209921/: session.json
.jules/cache/841505713017083886/: session.json
.jules/cache/9109336372168914774/: session.json
.jules/cache/9246777471161200731/: session.json
.jules/cache/9936753553469226169/: session.json
deimos/: Cargo.toml
deimos-reference/: Deimos.py
deimos-reference/.github/workflows/: develop.yml
deimos-reference/src/: auto_pet.py  combat_new.py  combat_objects.py  deck_encoder.py  drop_logger.py  gui_inputs.py  paths.py  questing.py  sigil.py  teleport_math.py  utils.py
deimos-reference/src/deimoslang/: ir.py  parser.py  tokenizer.py  types.py  vm.py
deimos/src/: main.rs
gui-mockups/html/: camera.html  combat.html  dashboard.html  navigation.html  scripting.html  settings.html
gui/tauri/: index.html  package.json  pnpm-lock.yaml
gui/tauri/src/: App.tsx  index.css
gui/tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
gui/tauri/src-tauri/src/: events.rs  lib.rs  state.rs
gui/tauri/src-tauri/src/automation/: anti_afk.rs  auto_pet.rs  camera_utils.rs  collision.rs  combat_cache.rs  combat_math.rs  combat_objects.rs  combat_utils.rs  command_parser.rs  config_combat.rs  dance_game_hook.rs  deck_encoder.rs  dialogue.rs  drop_logger.rs  effect_simulation.rs  mod.rs  paths.rs  questing.rs  sigil.rs  sprinty_client.rs  stat_viewer.rs  teleport_math.rs  utils.rs
gui/tauri/src-tauri/src/commands/: camera.rs  clients.rs  combat.rs  hooks.rs  mod.rs  navigation.rs
gui/tauri/src-tauri/src/deimoslang/: ir.rs  mod.rs  parser.rs  sem.rs  tokenizer.rs  types.rs  vm.rs
gui/tauri/src/components/: Sidebar.tsx  StatusBar.tsx  ToggleSwitch.tsx
gui/tauri/src/hooks/: useTelemetry.ts  useWizWalker.ts
gui/tauri/src/pages/: Camera.tsx  Combat.tsx  Dashboard.tsx  Navigation.tsx  (+2 more)
scripts/: check-jules-status.sh  check_status.ps1  fire_all.ps1  generate_math_glossary.mjs  generate_math_glossary.ps1  generate_prestigious_prompts.ps1  generate_prompts.ps1  jules_dispatch.ps1  jules_sessions.json  merge-jules-prs.sh  reply-to-jules.sh
scripts/jules_tasks/: 01_tokenizer.md  02_parser.md  03_ir.md  04_sem.md  05_vm.md  06_effect_simulation.md  07_config_combat.md  08_command_parser.md  09_audit_automation.md  10_audit_deimoslang.md  11_fix_compilation.md
wizwalker/: Cargo.toml
wizwalker/src/: client.rs  client_handler.rs  constants.rs  errors.rs  hotkey.rs  lib.rs  mouse_handler.rs  types.rs  utils.rs
wizwalker/src/combat/: card.rs  handler.rs  member.rs  mod.rs
wizwalker/src/file_readers/: cache_handler.rs  mod.rs  nif.rs  wad.rs
wizwalker/src/memory/: handler.rs  hooks.rs  instance_finder.rs  memory_object.rs  mod.rs  process_reader.rs  reader.rs
wizwalker/src/memory/objects/: actor_body.rs  behavior_instance.rs  behavior_template.rs  cam_view.rs  camera_controller.rs  character_registry.rs  client_duel_manager.rs  client_object.rs  client_tag_list.rs  client_zone.rs  combat_action.rs  combat_participant.rs  combat_resolver.rs  conditionals.rs  core_object.rs  core_template.rs  duel.rs  enums.rs  equipment_behavior.rs  equipment_set.rs  equipped_item_info.rs  equipped_slot_info.rs  fish.rs  fish_template.rs  fishing_manager.rs  game_client.rs  game_object_template.rs  game_stats.rs  gamebryo_camera.rs  gamebryo_presenter.rs  goal_data.rs  inventory_behavior.rs  madlib_arg.rs  madlib_block.rs  mod.rs  pip_count.rs  play_deck.rs  quest_client_manager.rs  quest_data.rs  quest_position.rs  (+8 more)
