[package]
name = "wizwalker"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_Graphics_Gdi", "Win32_UI_Input_KeyboardAndMouse"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
byteorder = "1"
bitflags = "2"
