[package]
name = "wizwalker"
version = "0.1.0"
edition = "2024"

[dependencies]
# Version range recommended by microsoft/windows-rs docs for flexibility
windows = { version = ">=0.59, <=0.62", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_Security",
] }
windows-core = "0.62"
tokio = { version = "1.49", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
byteorder = "1"
bitflags = "2"
flate2 = "1.1.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
