[package]
name = "wizwalker-gui"
version = "0.1.0"
description = "WizWalker — Arcane Architect Desktop GUI"
authors = ["Tobiscuit"]
edition = "2024"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"

# Path dependency to the wizwalker core library
wizwalker = { path = "../../../wizwalker" }

