[package]
name = "wizwalker-gui"
version = "0.1.0"
description = "WizWalker — Arcane Architect Desktop GUI"
authors = ["Tobiscuit"]
edition = "2024"

[lib]
name = "tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
flate2 = "1"
base64 = "0.22"
bitflags = "2"

# Path dependency to the wizwalker core library
wizwalker = { path = "../../../wizwalker" }
tauri-plugin-store = "2.4.2"
regex = "1"
lazy_static = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
reqwest = { version = "0.12", features = ["blocking", "json"] }

